995 - fix tests